HV-2119 Test against JDK 26
Signed-off-by: marko-bekhta <marko.prykladna@gmail.com>